--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@
     --prime3: #28af89;
     --white1: #ebebeb;
     --white2: #d1d1d1;
-    --grey1: #5e5e5e;
     --grey2: #9e9e9e;
+    --grey1: #5e5e5e;
 }
 
 body {
@@ -401,7 +401,7 @@ h3#hero-greeting {
     top: 50%;
     transform: translateY(-50%);
     font-size: 1.5em;
-    color: var(--prime2);
+    color: var(--dark2);
 }
 
 .timeline-content::before {
@@ -439,10 +439,14 @@ h3#hero-greeting {
     color: var(--prime1);
 }
 
-.timeline-details {
+.timeline-organization {
     font-size: 1em;
-    font-style: italic;
     margin: 10px 0;
+}
+
+.timeline-details {
+    font-size: 0.9em;
+    color: var(--grey2);
 }
 
 /* ==== Skills ==== */
@@ -553,28 +557,33 @@ h3#hero-greeting {
     border-radius: 10px;
     overflow: hidden;
     text-align: left;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* Initial shadow */
 }
 
 .project-card:hover {
-    transform: translateY(-10px);
+    transform: translateY(-5px); /* Subtle lift effect */
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Enhanced shadow on hover */
 }
 
 .project-card img {
-    width: 100%;
-    height: 200px;
+    width: calc(100% - 20px);
+    height: 180px;
     object-fit: cover;
+    border-radius: 8px;
+    margin: 10px;
 }
 
 .project-card h3 {
-    font-size: 1.8em;
+    font-size: 1.2em;
     color: var(--prime1);
-    margin: 15px 20px 10px;
+    margin: 5px 20px;
 }
 
 .project-card p {
-    font-size: 1em;
-    color: var(--white2);
+    font-size: 0.9em;
+    line-height: 1.3em;
+    color: var(--white1);
     margin: 0 20px 15px;
 }
 
@@ -601,9 +610,9 @@ h3#hero-greeting {
 }
 
 .project-links a {
-    color: var(--prime1);
+    color: var(--white2);
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 400;
     transition: color 0.3s;
 }
 
